--- a/myapp/templates/myapp/datadisplay.html
+++ b/myapp/templates/myapp/datadisplay.html
@@ -1,7 +1,6 @@
 {% block content %}
 <h2>Inserted Data</h2>
- {{ form.Data }}
-    {% csrf_token %}
-    {{ form.as_p }}
- 
+{% for forms in form %}
+    {{ forms.Data }}
+{% endfor %} 
 {% endblock %}
